seeded static manager feature
added ability to see MargaretManager as a static Manager Role and not a imported user for Saviynt Playbook instances
